--- a/localisation/TD_01_flavour_cakrawalunia_l_english.yml
+++ b/localisation/TD_01_flavour_cakrawalunia_l_english.yml
@@ -20,3 +20,22 @@
  ramumoni_group_local_logistics_desc: "Our troops must be ready to be cut from all supplies and raid local lands to maintain their numbers."
  ramumoni_group_cekedkusa: "Cekedkusa"
  ramumoni_group_cekedkusa_desc: "Balance between work and life is important in our culture, due to this everybody is provided with free time but failure at given task are taken seriously."
+
+ aminbaqlu_group_ideas: "Aminbaqlu Ideas"
+ aminbaqlu_group_ideas_bonus: "Aminbaqlu Ambition"
+ aminbaqlu_group_ideas_start: "Aminbaqlu Traditions"
+
+ aminbaqlu_group_kemut_doctrine: "Kemut Doctrine"
+ aminbaqlu_group_kemut_doctrine_desc: "With our operations focusing on coasts, we don't need big and sturdy ships but a lot of small ones that can encircle and dominate the enemy on the seas."
+ aminbaqlu_group_art_of_talking: "Art of Talking"
+ aminbaqlu_group_art_of_talking_desc: "As traders we need to maintain good relations with everybody."
+ aminbaqlu_group_continental_governance: "Continental Governance"
+ aminbaqlu_group_continental_governance_desc: "Because of our contact with continental states, we are learning from them how to modernize our state."
+ aminbaqlu_group_kabir_cooperation: "Kabir Cooperation"
+ aminbaqlu_group_kabir_cooperation_desc: "Kabirs are influencial local rulers that decide what will their people do, their loyalty to us allows us to impose our will on them easy."
+ aminbaqlu_group_art_of_spying: "Art of Spying"
+ aminbaqlu_group_art_of_spying_desc: "Sometimes smiles aren't enough."
+ aminbaqlu_group_profit_in_any_way: "Profit in any Way"
+ aminbaqlu_group_profit_in_any_way_desc: "To maintain our income we will resort to any ways that will keep them up."
+ aminbaqlu_group_persistent_charge: "Persistent Charge"
+ aminbaqlu_group_persistent_charge_desc: "By dividing our troops and retreating our exhausted troops we are able to always field fresh and supplied troops to the front."
