--- a/localisation/TD_01_flavour_cakrawalunia_l_english.yml
+++ b/localisation/TD_01_flavour_cakrawalunia_l_english.yml
@@ -2,9 +2,9 @@
  cakrawalunian_bunuhrica_reform: "Cakrawalunian Bunuhrica"
  cakrawalunian_bunuhrica_reform_desc: "Core of the Empire"
 
- ramumoni_group_ideas: "Ramumoni Ideas"
- ramumoni_group_ideas_bonus: "Ramumoni Ambition"
- ramumoni_group_ideas_start: "Ramumoni Traditions"
+ ramumoni_group_ideas: "Ramumoni Minor Ideas"
+ ramumoni_group_ideas_bonus: "Ramumoni Minor Ambition"
+ ramumoni_group_ideas_start: "Ramumoni Minor Traditions"
 
  ramumoni_group_imperial_core: "Imperial Core"
  ramumoni_group_imperial_core_desc: "We are known as the people from where the Cakrawalunian Empire started."
@@ -21,9 +21,9 @@
  ramumoni_group_cekedkusa: "Cekedkusa"
  ramumoni_group_cekedkusa_desc: "Balance between work and life is important in our culture, due to this everybody is provided with free time but failure at given task are taken seriously."
 
- aminbaqlu_group_ideas: "Aminbaqlu Ideas"
- aminbaqlu_group_ideas_bonus: "Aminbaqlu Ambition"
- aminbaqlu_group_ideas_start: "Aminbaqlu Traditions"
+ aminbaqlu_group_ideas: "Aminbaqlu Minor Ideas"
+ aminbaqlu_group_ideas_bonus: "Aminbaqlu Minor Ambition"
+ aminbaqlu_group_ideas_start: "Aminbaqlu Minor Traditions"
 
  aminbaqlu_group_kemut_doctrine: "Kemut Doctrine"
  aminbaqlu_group_kemut_doctrine_desc: "With our operations focusing on coasts, we don't need big and sturdy ships but a lot of small ones that can encircle and dominate the enemy on the seas."
