--- a/localisation/TD_01_Flavour_Pamkusea_l_english.yml
+++ b/localisation/TD_01_Flavour_Pamkusea_l_english.yml
@@ -49,6 +49,10 @@
  pamapoikia_new_destiny: "New Destiny"
  pamapoikia_new_destiny_desc: "Many people accepted our new reality. Dreams of returning to Pamkusea are long gone as people settle more and more in Zakarturia and see themselves as native Pamapoikians.We now have to wear this name with pride, because it's the only thing we have left."
 
+ ###Gov Reforms
+ pamkusean_sea_supremacy_reform: "Pamkusean Sea Supremacy"
+ pamkusean_sea_supremacy_reform_desc: "Pamkusean galleys and their crews must become a force feared across the seas, crushing inferior ships and seizing coasts for the glory of their people."
+
  #### Ideas
  
  pamkusea_ideas: "Pamkusean Ideas"
