--- a/localisation/TD_01_flavour_chilverchia_l_english.yml
+++ b/localisation/TD_01_flavour_chilverchia_l_english.yml
@@ -1,4 +1,7 @@
 ﻿l_english:
+ ##Gov Reforms
+ chilverchian_holy_orders_reform: "Chilverchian Holy Orders"
+ chilverchian_holy_orders_reform_desc: "Within the abbeys scattered across Chilverchia live venerable knights, ones who have not only seen countless battles, but also served in service of the faithful. They teach young squires in the way of the sword and of the book, training them to become the next great Knights of Chilverchia."
  ## Ideas
  group_chilverchian_ideas: "Chilverchian Minor Ideas"
  group_chilverchian_ideas_start: "Chilverchian Minor Traditions"
