Paraderavi Disaster (Might need more tweaking)

--- a/localisation/TD_01_flavour_samadia_l_english.yml
+++ b/localisation/TD_01_flavour_samadia_l_english.yml
@@ -318,3 +318,83 @@
  RENARAJA_ADJ: "Renaraji"
  DEVATARASTRA: "Devatarastra"
  DEVATARASTRA_ADJ: "Devatarastri"
+ 
+ #Paraderavi Disaster
+ disaster_crisis_of_paraderavian_guardian_state: "Crisis of Paraderavian Guardian State"
+ paraderavi_unowned_core_provinces.tooltip: "Unowned Core provinces"
+ disaster_pav_crisis.1.t: "Crisis of Paraderavian Guardian State"
+ disaster_pav_crisis.1.desc: "REPLACE_ME"
+ disaster_pav_crisis.1.a: "Stop these Barbarians!"
+ disaster_pav_crisis.2.t: "Empire Reborn"
+ disaster_pav_crisis.2.desc: "REPLACE_ME"
+ disaster_pav_crisis.2.a: "Glory to Rakkha Empire!"
+ disaster_pav_crisis.3.t: "Collapse of Paraderavian Guardian State"
+ disaster_pav_crisis.3.desc: "REPLACE_ME"
+ disaster_pav_crisis.3.a: "Damnation!"
+ disaster_pav_crisis.4.t: "Rebellion of Dakharakhasaraja"
+ disaster_pav_crisis.4.desc: "REPLACE_ME"
+ disaster_pav_crisis.5.t: "Independence of Kausadesa"
+ disaster_pav_crisis.5.desc: "REPLACE_ME"
+ disaster_pav_crisis.4_5.a: "Let them leave"
+ disaster_pav_crisis.4_5.b: "Independence? If you want it, you need to take it, but you already knew that"
+ disaster_pav_crisis.6.t: "Bring Capital back to Homeland"
+ disaster_pav_crisis.6.desc: "REPLACE_ME"
+ disaster_pav_crisis.6.a: "Relocate the Capital"
+ disaster_pav_crisis.6.b: "Leave it where it is"
+ disaster_pav_crisis.7.t: "Decay of Rakkha Empire"
+ disaster_pav_crisis.7.desc: "REPLACE_ME"
+ disaster_pav_crisis.7.a: "It's time to leave Paraderavi behind."
+ disaster_pav_crisis.8.t: "[From.GetName] leaves the Rakkha Empire"
+ disaster_pav_crisis.8.desc: "REPLACE_ME"
+ disaster_pav_crisis.8.a: "Damnation!"
+ disaster_pav_crisis.9.t: "Nomads Migrate into our Lands"
+ disaster_pav_crisis.9.desc: "REPLACE_ME"
+ disaster_pav_crisis.9.a: "Let it be"
+ disaster_pav_crisis.9.b: "Repel them!"
+ disaster_pav_crisis.10.t: "[From.GetName] raids [PAV_CRISIS_Raid_ET.GetName]"
+ disaster_pav_crisis.10.desc: "REPLACE_ME"
+ disaster_pav_crisis.10.a: "Damnation!"
+ disaster_pav_crisis.11.t: "Nomadic raids reach south"
+ disaster_pav_crisis.11.desc: "REPLACE_ME"
+ disaster_pav_crisis.11.a: "Damnation!"
+ disaster_pav_crisis.12.t: "Unsecure Border of Paraderavi"
+ disaster_pav_crisis.12.desc: "REPLACE_ME"
+ disaster_pav_crisis.12.a: "We ride to war!"
+ disaster_pav_crisis.12.b: "Now is not the time"
+ disaster_pav_crisis.13.t: "Collapse of Northern Frontier"
+ disaster_pav_crisis.13.desc: "REPLACE_ME"
+ disaster_pav_crisis.13.a: "Damnation!"
+ disaster_pav_crisis.14.t: "Mutiny of [PAV_CRISIS_Mutiny_ET.GetName] Nobility"
+ disaster_pav_crisis.14.desc: "REPLACE_ME"
+ disaster_pav_crisis.14.a: "Send off men to handle them"
+ disaster_pav_crisis.14.b: "We don't have time for this"
+ disaster_pav_crisis.15.t: "Northern Burghers Conspire with Nomads"
+ disaster_pav_crisis.15.desc: "REPLACE_ME"
+ disaster_pav_crisis.15.a: "Damnation!"
+ disaster_pav_crisis.15.b: "Stop them!"
+ disaster_pav_crisis.16.t: "Clergy is Afraid of Nomad Expansion"
+ disaster_pav_crisis.16.desc: "REPLACE_ME"
+ disaster_pav_crisis.16.a: "Damnation!"
+ disaster_pav_crisis.16.b: "Appease them"
+ disaster_pav_crisis.17.t: "Support of Northern Clergy"
+ disaster_pav_crisis.17.desc: "REPLACE_ME"
+ disaster_pav_crisis.17.a: "Utilize it"
+ disaster_pav_crisis.17.b: "Call on the faithful to join the army"
+ disaster_pav_crisis.18.t: "Southern Burghers Fund Anti-Nomad Campaigns"
+ disaster_pav_crisis.18.desc: "REPLACE_ME"
+ disaster_pav_crisis.18.a: "Accept Donation"
+ disaster_pav_crisis.18.b: "Donate it to Other Estates"
+ disaster_pav_crisis.19.t: "Nobility Supports our Cause"
+ disaster_pav_crisis.19.desc: "REPLACE_ME"
+ disaster_pav_crisis.19.a: "Utilize the support to increase legitimacy"
+ disaster_pav_crisis.19.b: "Call the levies"
+ TD_PAV_CRISIS_Kylitir_migration: "Kylitir Migration"
+ TD_PAV_CRISIS_Repelled_Nomads: "Repelled Nomads"
+ TD_PAV_CRISIS_Recently_Raided: "Recently Raided"
+ TD_PAV_CRISIS_Burghers_Conspire_with_Nomads: "Burghers Conspire with Nomads"
+ disaster_active_for_15_years_tooltip: "Disaster has been active for 15 years."
+ PAV_CRISIS_Raid_Paraderavi_for_Hordes_title: "Raid Paraderavian Borderlands @PAV"
+ PAV_CRISIS_WARNING_TT: "§RIf we don't finish the disaster in 15 years, the Paraderavi state will collapse.\nIf owned Hadaseradesa cores acquire 75 devastation, Hadaseradesa will rebel against us!§!"
+ PAV_CRISIS_RAID_PARADERAVI_TT: "We will raid a random Paraderavi province, taking the loot and causing devastation, with a 33% chance of targeting southern provinces."
+ PAV_CRISIS_Every_subjects_loses_20_LD_tt: "Every Subject will lose §G20 Liberty Desire§!"
+ PAV_CRISIS_Every_subjects_gains_25_LD_tt: "Every Subject will gain §R25 Liberty Desire§!"
