hre factions part 1

--- a/localisation/TD_01_flavour_saelian_l_english.yml
+++ b/localisation/TD_01_flavour_saelian_l_english.yml
@@ -53,7 +53,7 @@
  emperor_expand_diplomatic_reach_title: "Expand The Legatorum"
  emperor_expand_diplomatic_reach: "Expanded Legatorum"
  emperor_expand_diplomatic_reach_emperor: "Expanded Legatorum"
- emperor_expand_diplomatic_reach_desc: "Legates are important to imperial interest, being our envoys aboard and bringing important information to the Emperor. That institution might be expanded with additional rights and privileges which would result in greater prestige on international scene and granting better insight into other states.\n---\nUnlocks \"§YFabricate Casus Belli§!\" diplomatic action\n---"
+ emperor_expand_diplomatic_reach_desc: "Legates are important to imperial interest, being our envoys aboard and bringing important information to the Emperor. That institution might be expanded with additional rights and privileges which would result in greater prestige on international scene and granting better insight into other states.\n---\nUnlocks \"§YFabricate Casus Belli§!\" diplomatic action\nUnlocks \"§YImperial Factions§!\" mechanic during the diet.\n---"
  fabricate_casus_belli_title: "Fabricate Insult"
  fabricate_casus_belli_tooltip: "Fabricate Insult which will grant us Casus Belli against target country."
  fabricate_casus_belli_desc: "This will cost us §R[ROOT.GetHowMuchDipCost]§! diplomatic power and will lower targeted country's opinion of us. We Will gain §YDiplomatic Insult§! Casus Belli."
@@ -115,7 +115,7 @@
  
  emperor_unite_empire_title: "Unite The Empire"
  emperor_unite_empire: "United The Empire"
- emperor_unite_empire_desc: "We were at the bring of collapse with inefficient structure, allowing corrupt and opportunist princes to dictate what we should and we shouldn't. But these days are long gone, with all of the power in Emperor we can enter a new age... \nThe new Imperial Golden Age!\n---\n"
+ emperor_unite_empire_desc: "We were at the brink of collapse with inefficient structure, allowing corrupt and opportunist princes to dictate what we should and we shouldn't. But these days are long gone, with all of the power in Emperor we can enter a new age...\nThe new Imperial Golden Age!\n---\n"
 
  Demand_Levy: "Demand Levy"
  TD_Imperial_Decree1_tooltip: "Demand Additional Levy from our subjects"
@@ -1023,3 +1023,62 @@
 
 
  hre_blankline: "§W"
+
+ #SE factions
+ TD_hre_faction_button_cooldown_tt: "This faction's abilities are NOT on cooldown"
+
+ TD_hre_faction_1_tt: "Kings and Kuninstofs"
+ TD_hre_faction_1_button_1_tt: "Exempt from Levy"
+ TD_hre_faction_1_button_1_tt2: "Kings and Kuninstofs will be temporarily exempted from §YDemand Levy§! Ordinance."
+ TD_hre_faction_1_button_2_tt: "Call to War"
+ TD_hre_faction_1_button_2_tt2: "Every independent King and Kuninstof (that is currently at peace and is NOT a rival or enemy of the emperor) will join all wars of the emperor:"
+ hre_faction_1_levy_exemption: "Levy Exemption"
+ desc_hre_faction_1_levy_exemption: ""
+
+ TD_hre_faction_2_tt: "Imperial Princes"
+ TD_hre_faction_2_button_1_tt: "Exempt from Taxation"
+ TD_hre_faction_2_button_2_tt: "Enforce Peace"
+ hre_edict_of_peace_emperor: "Propagator of Peace"
+ desc_hre_edict_of_peace_emperor: ""
+ hre_edict_of_peace_prince: "Edict of Peace"
+ desc_hre_edict_of_peace_prince: ""
+ hre_faction_2_tax_exemption: "Imperial Tax Exempt"
+ desc_hre_faction_2_tax_exemption: ""
+ hre_faction_2_tax_exemption_prince: "Imperial Tax Exempt"
+ desc_hre_faction_2_tax_exemption_prince: ""
+
+ TD_hre_faction_3_tt: "Banks and Burghs"
+ TD_hre_faction_3_button_1_tt: "Road Investments"
+ TD_hre_faction_3_button_2_tt: "Take a Loan"
+ imperial_road_expansion: "Imperia Road Expansion"
+ desc_imperial_road_expansion: ""
+
+ TD_hre_faction_4_tt: "Imperial Inquisition"
+ TD_hre_faction_4_button_1_tt: "Give Free Hand"
+ TD_hre_faction_4_button_2_tt: "Direct Efforts"
+ rampant_inquisitors: "Rampant Inquisitors"
+ desc_rampant_inquisitors: ""
+ emperor_rampant_inquisitors: "Enabled Rampant Inquisitors"
+ desc_emperor_rampant_inquisitors: ""
+ directed_inquisitors: "Directed Inquisitors"
+ desc_directed_inquisitors: ""
+
+ TD_hre_faction_5_tt: "Imperial Bureaucrats"
+ TD_hre_faction_5_button_1_tt: "Tax Reinvestment"
+ TD_hre_faction_5_button_2_tt: "Organize a Census"
+ hre_tax_reinvestment: "Tax Reinvestment"
+ desc_hre_tax_reinvestment: ""
+ hre_tax_reinvestment_emperor: "Tax Reinvestment"
+ desc_hre_tax_reinvestment_emperor: ""
+ hre_census: "Imperial Census"
+ desc_hre_census: ""
+ hre_census_emperor: "Imperial Census"
+ desc_hre_census_emperor: ""
+
+ TD_hre_faction_6_tt: "Imperial Officers"
+ TD_hre_faction_6_button_1_tt: "Appease to Officers"
+ TD_hre_faction_6_button_2_tt: "Enforce Stricter Drill"
+ hre_drill: "Strict Drill"
+ desc_hre_drill: ""
+ hre_officer_luxuries: "Luxuries for Officers"
+ desc_hre_officer_luxuries: ""
