--- a/localisation/TD_01_flavour_samadia_l_english.yml
+++ b/localisation/TD_01_flavour_samadia_l_english.yml
@@ -395,8 +395,10 @@
  TD_PAV_CRISIS_Burghers_Conspire_with_Nomads: "Burghers Conspire with Nomads"
  disaster_active_for_15_years_tooltip: "Disaster has been active for 15 years."
  PAV_CRISIS_Raid_Paraderavi_for_Hordes_title: "Raid Paraderavian Borderlands @PAV"
- PAV_CRISIS_WARNING_TT: "§RIf we don't finish the disaster in 15 years, the Paraderavi state will collapse.\nIf owned Hadaseradesa cores acquire 75 devastation, Hadaseradesa will rebel against us!§!"
+ PAV_CRISIS_WARNING_TT: "§RIf we don't finish the disaster in 15 years, the Paraderavi state will collapse.\nIf owned Hadaseradesa cores acquire 75 devastation, Hadaseradesa will rebel against us!\nWe will be unable to form alliances during duration of the disaster.§!"
  PAV_CRISIS_RAID_PARADERAVI_TT: "We will raid a random Paraderavi province, taking the loot and causing devastation, with a 33% chance of targeting southern Paraderavi provinces, and 17% chance of targeting Paraderavi subjects' provinces."
  PAV_CRISIS_Every_subjects_loses_20_LD_tt: "Every Subject will lose §G20 Liberty Desire§!"
  PAV_CRISIS_Every_subjects_gains_25_LD_tt: "Every Subject will gain §R25 Liberty Desire§!"
  paraderavi_broke_free: "Became Independent from Overlord"
+ CANNOT_MAKE_ALLIANCES_PARADERAVI: "§RWe cannot form alliances during Crisis of Paradevian Guardian State Disaster.§!"
+ FROM_CANNOT_MAKE_ALLIANCES_PARADERAVI: "§RParaderavi cannot form alliances during Crisis of Paradevian Guardian State Disaster.§!"
