Avukhima Buff (Revert if too op)

--- a/localisation/TD_01_flavour_samadia_l_english.yml
+++ b/localisation/TD_01_flavour_samadia_l_english.yml
@@ -319,6 +319,14 @@
  DEVATARASTRA: "Devatarastra"
  DEVATARASTRA_ADJ: "Devatarastri"
  
+ estate_expanded_levies: "Expanded Levies"
+ estate_expanded_levies_desc: "If we want to rise to greatness, we need to cooperate with nobility in terms of greater conscription."
+ estate_avukhima_levies_for_samgharsahi: "Levies for Samgharsahi"
+ estate_avukhima_levies_for_samgharsahi_desc: "With our growing presence in Khantadun, and expansion eastward, we should conscript more Samgharsahi people into our army."
+ estate_avukhima_levies_for_samgharsahi_effect_tooltip: "Every owned province of §YSamgharsahi§! faith gains §Y'Increased Heathen Recruitment'§!, giving the following effects:\nLocal Manpower Modifier: §G+30.0%§!"
+ estate_avukhima_levies_for_samgharsahi_revoke_tooltip: "The modifier §Y'Increased Heathen Recruitment'§! is removed from all owned §YSamgharsahi§! provinces."
+ estate_avukhima_levies_for_eopedian_mod: "Increased Heathen Recruitment"
+ 
  #Paraderavi Disaster
  disaster_crisis_of_paraderavian_guardian_state: "Crisis of Paraderavian Guardian State"
  paraderavi_unowned_core_provinces.tooltip: "Unowned Core provinces"
