--- a/localisation/TD_01_flavour_silvestria_l_english.yml
+++ b/localisation/TD_01_flavour_silvestria_l_english.yml
@@ -70,9 +70,9 @@
  saelish_centralisation_of_saelish_region_desc: "Growing threat of the Geoberic unification made the local princes realise, that they need to act quickly and increase their strength to push them back - even at the cost of their fellow noblemen."
  saelish_military_engineeering_schools: "Modern Military Engineering"
  saelish_military_engineeering_schools_desc: "Mercenary wars taught the empire that the superior firepower was more important than good cavalry. Ever since then, many tried to tame the power of the gunpowder in these lands."
- upper_magreiner_ideas: "Upper Magreiner Ideas"
- upper_magreiner_ideas_bonus: "Upper Magreiner Ambition"
- upper_magreiner_ideas_start: "Upper Magreiner Traditions"
+ upper_magreiner_ideas: "Ordenic Minor Ideas"
+ upper_magreiner_ideas_bonus: "Ordenic Minor Ambition"
+ upper_magreiner_ideas_start: "Ordenic Minor Traditions"
  upper_magreiner_heart_of_the_empire: "Heart of the Empire"
  upper_magreiner_heart_of_the_empire_desc: "Upper Magreina is where the Via Caroli and Via Magreini cross in the great city of Hegenstadt."
  upper_magreiner_law_reforms: "Law Reforms"
@@ -85,11 +85,11 @@
  magreiner_imperial_ties_desc: "many local rulers can quickly travel to the imperial capital and this closeness many times benefited not only princes but also the imperial court."
  upper_magreiner_cradle_of_imperial_baroque: "Cradle of Imperial Baroque"
  upper_magreiner_cradle_of_imperial_baroque_desc: "Baroque, more known in the empire as so-called 'Wahrekunst', was a way for the emperor and tetrarchy to fight against the reformation and show the true power of the empire."
- development_of_the_upper_magreiner: "Development of the Upper Magreiner"
+ development_of_the_upper_magreiner: "Development of the Ordenic"
  development_of_the_upper_magreiner_desc: "Fertile farmlands of the Magreina bring us prosperity, but they thanks to the investments of many emperor they are increasingly making us and the empire much more self-sustainable."
- middle_magreiner_ideas: "Middle Magreiner Ideas"
- middle_magreiner_ideas_bonus: "Middle Magreiner Ambition"
- middle_magreiner_ideas_start: "Middle Magreiner Traditions"
+ middle_magreiner_ideas: "Toflanter Minor Ideas"
+ middle_magreiner_ideas_bonus: "Toflanter Minor Ambition"
+ middle_magreiner_ideas_start: "Toflanter Minor Traditions"
  middle_magreiner_granary_of_the_empire: "Granary of the Empire"
  middle_magreiner_granary_of_the_empire_desc: "Flatlands of northern Silvestria are so fertile that they not only feed the local population, but the wheat and rye are exported to outer reaches of the empire and even outside of it."
  middle_magreiner_homeland_protection: "Homeland Protection"
