--- a/localisation/TD_cultures_l_english.yml
+++ b/localisation/TD_cultures_l_english.yml
@@ -100,8 +100,8 @@
  snaiwatzer: "Snaiwatzer"
  felder: "Felder"
  geoberic: "Geoberic"
- middle_magreiner: "Middle Magreiner"
- upper_magreiner: "Upper Magreiner"
+ middle_magreiner: "Toflanter"
+ upper_magreiner: "Ordenic"
  nahtrucer: "Nähtrucer"
  saelish: "Salish"
  ostemer: "Ostemer"
