--- a/localisation/TD_trade_companies_l_english.yml
+++ b/localisation/TD_trade_companies_l_english.yml
@@ -44,12 +44,12 @@
  indriger_company: "Indriger Charter"
  TRADE_COMPANY_INDRIGER_Root_Culture_GetName: "[Root.Culture.GetName] Indrigerland Company"
  TRADE_COMPANY_INDRIGER_Trade_Company: "Indriger Trade Company"
- upper_magreina_company: "Upper Magreiner Charter"
+ upper_magreina_company: "Ordenic Charter"
  TRADE_COMPANY_UPPER_MAGREINA_Root_Culture_GetName: "[Root.Culture.GetName] Upper Magreina Company"
- TRADE_COMPANY_UPPER_MAGREINA_Trade_Company: "Upper Magreiner Trade Company"
- middle_magreina_company: "Middle Magreiner Charter"
- TRADE_COMPANY_MIDDLE_MAGREINA_Root_Culture_GetName: "[Root.Culture.GetName] Middle Magreina Company"
- TRADE_COMPANY_MIDDLE_MAGREINA_Trade_Company: "Middle Magreiner Trade Company"
+ TRADE_COMPANY_UPPER_MAGREINA_Trade_Company: "Ordenic Trade Company"
+ middle_magreina_company: "Toflanter Charter"
+ TRADE_COMPANY_MIDDLE_MAGREINA_Root_Culture_GetName: "[Root.Culture.GetName] Magreinland Company"
+ TRADE_COMPANY_MIDDLE_MAGREINA_Trade_Company: "Toflanter Trade Company"
  mezonian_company: "Mezonian Charter"
  TRADE_COMPANY_MEZONIAN_Root_Culture_GetName: "[Root.Culture.GetName] Mezonia Company"
  TRADE_COMPANY_MEZONIAN_Trade_Company: "Mezonian Trade Company"
