--- a/localisation/TD_01_flavour_saelian_l_english.yml
+++ b/localisation/TD_01_flavour_saelian_l_english.yml
@@ -915,13 +915,13 @@
  SE_incident.201.t: "The Northern Nobles"
  SE_incident.201.desc: "Originally, the nobility of the empire was divided into 2 parts - the 'old blood' Silvestrian nobility, descending from various kuninstofs and local heroes, and the 'New Blood' nobility of the Camarian origin. With the expansion of the empire north of the Limmontes, a new kind of nobility emerged. Settlers willing to expand in the northern lands have been given wildly different privileges of the southern nobility in order to encourage expansion in the north. Their vast influence in the relatiely lawless regions allowed them to consolidate much power.\n\nWith the ascension of [Root.Monarch.GetName] as the ruler of the north not only as the emperor, but also as the prince created a peculiar administrative problem, which is creating increasingly tense situation in the empire."
  SE_incident.201.a: "Power of the northern nobles must be contained."
- SE_incident.201.a_tt: "Every owned Nähtrucer or Middle Magreiner province will get:"
+ SE_incident.201.a_tt: "Every owned Nähtrucer or MToflanterprovince will get:"
  lichter_unrest_mod: "Lichterian Uprising"
  desc_lichter_unrest_mod: "The Nobles of Lichter and their allies have organized a rebellion across all of the northern provinces."
  SE_incident.201.b: "We will elevate the southern nobles so that they privileges match the colonial nobility."
  SE_incident.201.c: "A new Kuninstofship will effectively solve this problem"
  SE_incident.201.c_tt0: "Every province with a §YLichterian§! core owned by our subjects will be ceded to Lichter."
- SE_incident.201.c_tt: "Every province owned by emperor or its subjects of either §YMiddle Magreiner§! or §YNähtrucer§! cultures will be ceded to the new Kuninstofthum."
+ SE_incident.201.c_tt: "Every province owned by emperor or its subjects of either §YMToflanter! or §YNähtrucer§! cultures will be ceded to the new Kuninstofthum."
  SE_incident.202.t: "[Root.GovernmentName] of [Root.Owner.GetName] and the Empire"
  SE_incident.202.desc: "The wind of change has finally struck [Root.GetName]. With the growing ambitions of glorious [Root.Monarch.GetTitle] [Root.Monarch.GetName] we have reached a point where we are the ones to decide our own fate and not be dependent on other states. This poses important question - should we remain loyal to the emperor or stand on our own in this new and changing world?"
  SE_incident.202.a: "We shall remain faithful to [Emperor.Monarch.GetName]."
