--- a/localisation/TD_sprite_packs_l_english.yml
+++ b/localisation/TD_sprite_packs_l_english.yml
@@ -94,7 +94,7 @@
  harban_sprite_pack: "Harban Sprite Pack"
  salish_sprite_pack: "Salish Sprite Pack"
  felder_sprite_pack: "Felder Sprite Pack"
- upper_magreiner_sprite_pack: "Upper Magreiner Sprite Pack"
+ upper_magreiner_sprite_pack: "Ordenic Sprite Pack"
  ostemer_sprite_pack: "Ostemer Sprite Pack"
  nahtrucker_sprite_pack: "Nahtrucer Sprite Pack"
  nordmarker_sprite_pack: "Nordmarker Sprite Pack"
@@ -104,7 +104,7 @@
  geoberic_sprite_pack: "Geoberic Sprite Pack"
  silvestria_sprite_pack: "Silvestria Sprite Pack"
  granlatz_sprite_pack: "Granlatz Sprite Pack"
- middle_magreiner_sprite_pack: "Middle Magreiner Sprite Pack"
+ middle_magreiner_sprite_pack: "Toflanter Sprite Pack"
  snaiwatzer_sprite_pack: "Snaiwatzer Sprite Pack"
  leerohe_sprite_pack: "Leerohe Sprite Pack"
  zieglerheim_sprite_pack: "Zieglerheim Sprite Pack"
