--- a/localisation/TD_01_flavour_murtafia_l_english.yml
+++ b/localisation/TD_01_flavour_murtafia_l_english.yml
@@ -5,3 +5,21 @@
  DAYELBAK: "Daleybak"
  KENARMERWA: "Kenarmerwa"
  DAYELBAKWA: "Dayelbakwa"
+
+ murtafian_group_ideas: "Murtafian Minor Ideas"
+ murtafian_group_ideas_bonus: "Murtafian Minor Ambition"
+ murtafian_group_ideas_start: "Murtafian Minor Traditions"
+ murtafian_ties_of_blood: "Ties of Blood"
+ murtafian_ties_of_blood_desc: "It is said that no matter the city a Murtafian travels to, they will have at least few close relatives living there. Marriages between merchants, nobles and monarchs are common and strengthen the bond between the towns even more."
+ murtafian_bulwark_of_ilum: "Bulwark of Ilum"
+ murtafian_bulwark_of_ilum_desc: "Enroaching Qubrayian Theocracies and rapidly spreading beliefs from across the sea threaten the existence of our tradition. We must defend the legacy of the prophets at all cost - or die trying."
+ murtafian_urban_walls: "Urban Walls"
+ murtafian_urban_walls_desc: "You won't find a city in Murtafia which is not surrounded by walls, with most having two or even three rings around the capital palace. These fortifications are engineered in a way, that requires minimal supervision and maintenance during the times of peace."
+ murtafian_levy_recompensation: "Levy Recompensation"
+ murtafian_levy_recompensation_desc: "Every able-bodied male citizen is forced to join the army once called. To pay them for their service, they are given recompensation in coffee, cloth, rations of grain, and sometimes even housing."
+ murtafian_kahetan_crossroad: "Kahetan Crossroad"
+ murtafian_kahetan_crossroad_desc: "While we may not be as accepting of foreign religions as are our neighbours, we still participate in the exchange of goods between Musarfians, Mesutians, Diarenans and Visparayans."
+ murtafian_philosophical_revival: "Philosophical Revival"
+ murtafian_philosophical_revival_desc: "Late sixteenth century arrival of Zakarturian and Mysentrian merchants rekindled once lost tradition of theological treaties and debates among our peoples. Facing new challenges as missionaries apppeared, artists and philosophers from every city create increasingly elaborate works of art."
+ murtafian_sameran_league: "Sameran League"
+ murtafian_sameran_league_desc: "Shurramh's expansionist policy led to some more precautious cities to sign the pact of Samera - a defensive and economic league, with the goal of organizing a professional standing army and constructing a network of fortification in the northern borderlands."
