--- a/localisation/TD_01_flavour_pasmangala_l_english.yml
+++ b/localisation/TD_01_flavour_pasmangala_l_english.yml
@@ -1,3 +1,9 @@
 ﻿l_english:
  pasmangalan_tribe_reform: "Pasmangalan Tribe"
  pasmangalan_tribe_reform_desc: "Semi-nomadic tribes of Pasmangala mostly practice slash and burn agriculture."
+ TD_pasmangala_repel_the_invaders: "Repel the Invaders"
+ pasmangala.1.t: "Invasion of Pasmangala"
+ pasmangala.1.desc: "The Jakihakta forgeiners invade our holy forests, it is time that we repel them back, to arms!"
+ pasmangala.1.a: "To War!"
+ aranyandesa_nation_title: "Form Aranyandesa @ARY"
+ aranyandesa_nation_desc: "Aranyana people mix with Pasmangalan tribes, only through coexistence we can continue."
