--- a/localisation/TD_cultures_l_english.yml
+++ b/localisation/TD_cultures_l_english.yml
@@ -471,6 +471,7 @@
  hoxoan: "Hoxoan"
  raykaani: "Raykaani"
  pyaari: "Pyaari"
+ aranyana_pasmangalan: "Aranyana"
  
  cak_kecig_group: "Cak'kecig"
  bhariew: "Bhariew"
