--- a/localisation/countries_l_english.yml
+++ b/localisation/countries_l_english.yml
@@ -1212,6 +1212,8 @@
  PYA_ADJ: "Pyaari"
  SAK: "Sakar"
  SAK_ADJ: "Sakari"
+ ARY: "Aranyandesa"
+ ARY_ADJ: "Aranyana"
  
  BNB: "Bnai Byniev"
  BNB_ADJ: "Bnai Bynievi"
