--- a/localisation/prov_names_l_english.yml
+++ b/localisation/prov_names_l_english.yml
@@ -855,7 +855,7 @@
  PROV854: "Calimigli"
  PROV855: "Napicano"
  PROV856: "Inoltio"
- PROV857: "Grottinio"
+ PROV857: "Grottingen"
  PROV858: "Fiserate"
  PROV859: "Voliteria"
  PROV860: "Piematria"
