Pasmangalan and Thboiran unit models

--- a/localisation/TD_01_flavour_pasmangala_l_english.yml
+++ b/localisation/TD_01_flavour_pasmangala_l_english.yml
@@ -7,3 +7,5 @@
  pasmangala.1.a: "To War!"
  aranyandesa_nation_title: "Form Aranyandesa @ARY"
  aranyandesa_nation_desc: "Aranyana people mix with Pasmangalan tribes, only through coexistence we can continue."
+ TD_domain_of_the_swordmasters: "Domain of the Swordmasters"
+ TD_domain_of_the_swordmasters_desc: "These lands were granted to the swordmasters long ago in exchange for helping unify Raykaamar. Their descendants take great pride in their warrior legacy."
