--- a/localisation/TD_sprite_packs_l_english.yml
+++ b/localisation/TD_sprite_packs_l_english.yml
@@ -132,3 +132,4 @@
  weesfani_sprite_pack: "Weesfani Sprite Pack"
  achtveldi_sprite_pack: "Achtveldi Sprite Pack"
  north_anavatic_sprite_pack: "North Anavatic Sprite Pack"
+ pasmangalan_thboiran_sprite_pack: "Pasmangalan and Thboiran Sprite Pack"
