--- a/localisation/TD_sprite_packs_l_english.yml
+++ b/localisation/TD_sprite_packs_l_english.yml
@@ -74,8 +74,8 @@
  avukhima_sprite_pack: "Avukhima Sprite Pack"
  dagivelo_sprite_pack: "Dagivelo Sprite Pack"
  matserval_sprite_pack: "Matserval Sprite Pack"
- tskvania_sprite_pack: "Tskvania Sprite Pack"
- shusali_sprite_pack: "Shusali Sprite Pack"
+ daslevanian_sprite_pack: "Daslevanian Sprite Pack"
+ shusali_tskvania_sprite_pack: "Shusali and Tskvania Sprite Pack"
  zakarturi_empire_sprite_pack: "Zakarturi Empire Sprite Pack"
  eameneos_pampoikia_sprite_pack: "Eamenos and Pamapoikia Sprite Pack"
  cleidemni_sprite_pack: "Cleidemni Sprite Pack"
@@ -133,3 +133,5 @@
  achtveldi_sprite_pack: "Achtveldi Sprite Pack"
  north_anavatic_sprite_pack: "North Anavatic Sprite Pack"
  pasmangalan_thboiran_sprite_pack: "Pasmangalan and Thboiran Sprite Pack"
+ okukaigan_sprite_pack: "Okukaigan Sprite Pack"
+ vakepos_sprite_pack: "Vakepos Sprite Pack"
