--- a/localisation/TD_sprite_packs_l_english.yml
+++ b/localisation/TD_sprite_packs_l_english.yml
@@ -135,3 +135,6 @@
  pasmangalan_thboiran_sprite_pack: "Pasmangalan and Thboiran Sprite Pack"
  okukaigan_sprite_pack: "Okukaigan Sprite Pack"
  vakepos_sprite_pack: "Vakepos Sprite Pack"
+ ta_trai_group_sprite_pack: "Ta Trai Group Sprite Pack"
+ nai_sprite_pack: "Nai Sprite Pack"
+ misivid_group_sprite_pack: "Misivid Group Sprite"
