Snaiwatzer Minor ideas rework

--- a/localisation/TD_01_flavour_silvestria_l_english.yml
+++ b/localisation/TD_01_flavour_silvestria_l_english.yml
@@ -120,20 +120,20 @@
  snaiwatzer_ideas: "Snaiwatzer Minor Ideas"
  snaiwatzer_ideas_bonus: "Snaiwatzer Minor Ambition"
  snaiwatzer_ideas_start: "Snaiwatzer Minor Traditions"
- snaiwatzer_mining_region: "Mining Region"
- snaiwatzer_mining_region_desc: "These lands are responsible for almot three quarters of the entire ore mining and processing. These easily available resources such as iron and coal allow us to cheaply produce equipment for our troops."
- snaiwatzer_cacumudian_trade: "Cacumudian Trade"
- snaiwatzer_cacumudian_trade_desc: "Roads through the Cacumuds mountains are frequently used by Silvestrine and Camarian traders, exchanging ideas and goods. Inhospitability and hard access to through these mountains allows us to easily tax traders if they want to pass."
- snaiwatzer_mercenary_industry: "Mercenary Industry"
- snaiwatzer_mercenary_industry_desc: "Abundance of military resources and constant demand for men-for-hire made Snaiwatz the prime location for mercenary industry to develop."
+ snaiwatzer_legacy_of_adrianburg_privilege: "Legacy of Adrianburg Privilege"
+ snaiwatzer_legacy_of_adrianburg_privilege_desc: "Adrianburg Privilege was a privilege that exempted Snaiwatzer nobility from most taxes that was enacted on year 986. It has resulted in increased autonomy of Snaiwatz, back then known as Kuninstofthum of Eniver, in regards to rest of the Saelian Empire, and increased stability in the area was achieved thanks to this privilege."
+ snaiwatzer_old_eniver_roads: "Old Eniver Roads"
+ snaiwatzer_old_eniver_roads_desc: "Kuninstofthum of Eniver was a political entity that spanned most of modern Snaiwatz back in IXth and Xth century, and most roads connecting north and south we are using today are from that period. They are to this day used as very important land trade routes and for military purposes."
+ snaiwatzer_organization_of_kriegskapitanate: "Organization of Kriegskapitänate"
+ snaiwatzer_organization_of_kriegskapitanate_desc: "Most mercenaries in the saelian empire are either royal armies rented out by the Nahtrucer markgrafs or private armies of Snaiwatz. They were widely used since the 13th century as an alternative way of income for rural pastoralists of Cacumuds. They were hired not only by the small states in their regional conflicts, such as Geoberic princes and Salish princes, but also by bigger countries, such as Bohemia, Rubmeo and even Kriegersteiner emperors. They were known in these times for their discipline and effectiveness, often being smaller in numbers, but using more elaborate tactics and advanced technology, e. g. adopting gunpowder arquebuses earlier than any other part of the empire. Most of these mercenaries aren’t organized as free companies or independent armies, but are rather soldiers rented out by the local states. They are led by the Kriegskapitäns, meaning war captains, who is a representative of the duke or count in military affairs outside of the borders of the state. In the early times they were simply relatives of the ruler, but with time they shifted into a more meritocratic position."
  snaiwatzer_mountain_defenses: "Natural Defenses"
  snaiwatzer_mountain_defenses_desc: "A bad leader couldn't defend a hill, but a fool couldn't defend a mountain with modern fortifications and well-trained garrison. Many armies inexperienced in fighting in mountains failed to conquer us and this is how we will survive."
  snaiwatzer_zbojaner_roots: "Zbojaner Roots"
  snaiwatzer_zbojaner_roots_desc: "These territories were originally settled by Zbojaner people and many of our own still have Bohemian ancestors. Their folklore and religion is still seen in architecture and art and sometimes even claiming Zbojaner ancestry is seen as prestigious."
- snaiwatzer_southern_influences: "Southern Influences"
- snaiwatzer_southern_influences_desc: "Stories of liberal republics in the south has sparked a dream of a democratic state, especially in lower social classes. They work hard not for their lords, but for their community and themselves - and local rulers know that they need to respect that."
- snaiwatzer_cradle_of_engineering_schools: "High Altitude Constructions"
- snaiwatzer_cradle_of_engineering_schools_desc: "Harsh winters and wild mountains taught the Snaiwatzer people how to not only effectively build good shelters, but also how to conserve resources in case of an emergency."
+ snaiwatzer_legacy_of_mercenary_wars: "Legacy of Mercenary Wars"
+ snaiwatzer_legacy_of_mercenary_wars_desc: "With how all five wars of the Mercenary wars ravaged the empire, and with how main stage of said conflicts was Snaiwatz itself, we have learned a learned a lot about military warfare from it."
+ snaiwatzer_expansion_of_mountainous_settlements: "Expansion of Mountainous Settlements"
+ snaiwatzer_expansion_of_mountainous_settlements_desc: "Harsh winters and wild mountains taught the Snaiwatzer people how to not only effectively build good shelters, but also how to conserve resources in case of an emergency."
  geoberic_ideas: "Geoberic Minor Ideas"
  geoberic_ideas_bonus: "Geoberic Minor Ambition"
  geoberic_ideas_start: "Geoberic Minor Traditions"
