Snaiwatz Ideas and color tweak

--- a/localisation/TD_01_flavour_silvestria_l_english.yml
+++ b/localisation/TD_01_flavour_silvestria_l_english.yml
@@ -210,9 +210,9 @@
  snaiwatzer_nation_ideas_start: "Snaiwatzer Traditions"
  snaiwatzer_nation_ideas_bonus: "Snaiwatzer Ambition"
  snaiwatzer_metal_trade_hegemony: "Metal Trade Hegemony"
- snaiwatzer_metal_trade_hegemony_desc: "Cacumuds are rich with iron, coal, silver and even gold. Natural position of our country combined with the fact that our nation's most popular profession is mining, we achieved total domination of metal trade in Silvestria."
- snaiwatzer_peasant_influences: "Peasant Influences"
- snaiwatzer_peasant_influences_desc: "Stories of liberal republics in the south has sparked a dream of a democratic state, especially in lower social classes. They have worked hard to help us realize this, and with many revolutionary ideas from the south accelerating the societal reforms within our country, we might as well listen to them."
+ snaiwatzer_metal_trade_hegemony_desc: "Western Cacumuds are rich with iron, coal, silver and even gold. With reunification of old Kingdom of Eniver now known as Snaiwatz, we once again set our sight at dominating mining and trade in the entire Saelian Empire."
+ snaiwatzer_peasants_in_kriegskapitanate: "Peasants in Kriegskapitänate"
+ snaiwatzer_peasants_in_kriegskapitanate_desc: "With most of our mercenary armies that we rent out being composed of pastoral Cacumudian peasants, we decided to expand it to all peasants of the reunited Snaiwatz."
  snaiwatzer_high_altitude_defenses: "High Altitude Defenses"
  snaiwatzer_high_altitude_defenses_desc: "Living across the continental divide, with our influences spreading from peaks to piedmont, we have naturally developed our defense fortifications accordingly with the terrain, making them one of the best mountain fortresses in the entire Mysentria."
  snaiwatzer_mountain_folk: "Mountain Folk"
@@ -220,10 +220,9 @@
  snaiwatzer_new_imperial_mint: "New Imperial Mint"
  snaiwatzer_new_imperial_mint_desc: "When the Imperial Mint of Limburg depleted, the emperor established a new mint in our lands, in the very heart of it, between the Cacumudian mountain range, in Grobhalde, and after years of running it, we have learned many lessons on managing a mint."
  snaiwatzer_improved_gunmaking: "Improved Gunmaking"
- snaiwatzer_improved_gunmaking_desc: "Our iron and steel being one of the best in the entire Silvestria, or maybe even entire Mysentria, and with echoes of gunpowder warfare getting into our court, we have started to improve our gunmaking, creating one of the most durable guns in our century."
- snaiwatzer_reformed_lawmaking: "Reformed Lawmaking"
- snaiwatzer_reformed_lawmaking_desc: "With relative peace that Cacumuds provided to our lands from the south, and avoiding many wars that have plagued the imperial lands to the north, we had started investing our time into lawmaking more than warfare, and with southern ideas still alive in our country, we created one of more refined law codex in the history of Silvestria."
- 
+ snaiwatzer_improved_gunmaking_desc: "With Mercenary wars behind us and Elender Confederation defeated at last, we take lessons from this brutal conflict so the next time our Kriegskapitänate revolts, we are better prepared for waging modern warfare."
+ snaiwatzer_expansion_of_adrianburg_privileges: "Expansion of Adrianburg Privilege"
+ snaiwatzer_expansion_of_adrianburg_privileges_desc: "Adrianburg Privilege marks the time period Eniver ceased to be and disunited Snaiwatz came to be, but now, we have managed to secure expansion of said Privileges, and this marks the point in time that Snaiwatz became true heir to Kuninstofthum of Eniver."
  
  silvestrine.1.t: "Great Fire of Rogau"
  silvestrine.1.desc: "While it was expected for a city with predominately wooden architecture to experience occasional fires, no one could have predicted how far and fast it can spread.\nOn [GetDate] Anno Imperii, the city experienced the most destructive fire in Sylvestria of the millenium, which by some estimates razed to the ground 80% of the whole city, only leaving occasional churches and towers standing. Those fortunate souls which have survived the inferno now must find salvation in their city council's grace."
