Samadia Unit models and fixes

--- a/localisation/TD_sprite_packs_l_english.yml
+++ b/localisation/TD_sprite_packs_l_english.yml
@@ -138,3 +138,11 @@
  ta_trai_group_sprite_pack: "Ta Trai Group Sprite Pack"
  nai_sprite_pack: "Nai Sprite Pack"
  misivid_group_sprite_pack: "Misivid Group Sprite"
+ viravananti_group_sprite_pack: "Viravananti Group Sprite Pack"
+ samadian_group_sprite_pack: "Samadian Group Sprite Pack"
+ sarvini_group_sprite_pack: "Sarvini Group Sprite Pack"
+ nacaksu_kackyin_group_sprite_pack: "Nacaksu and Kackyin Group Sprite Pack"
+ apastra_group_sprite_pack: "Apastra Group Sprite Pack"
+ jatihakta_group_sprite_pack: "Jatihatka Group Sprite Pack"
+ mazavasi_group_sprite_pack: "Mazavasi Group Sprite Pack"
+ 
